--- a/.github/workflows/notify_discord.yml
+++ b/.github/workflows/notify_discord.yml
@@ -27,6 +27,6 @@ jobs:
             fi
 
             curl -X POST -H "Content-Type: application/json" \
-              -d "{\"content\": \"# 📢 GitHubにPushがありました！\n>>> ## 👤 by $actor\n\n**🕒  $formatted_time**\n💬 $message\n\n\"}" \
+              -d "{\"content\": \"# 📢 GitHubにPushがありました！\n>>> # 👤 by $actor\n\n**🕒  $formatted_time**\n💬 $message\n\n\"}" \
               ${{ secrets.DISCORD_WEBHOOK }}
           done
