--- a/.github/workflows/notify_discord.yml
+++ b/.github/workflows/notify_discord.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Notify pushed commits with single header (Skip Merge)
+      - name: Notify all pushed commits in one message (Skip Merge)
         shell: bash
         run: |
           # コミット情報取得
@@ -18,14 +18,11 @@ jobs:
           actor='${{ github.actor }}'
           length=$(echo "$commits" | jq length)
 
-          # メインタイトル送信（1回だけ）
-          curl -X POST -H "Content-Type: application/json" \
-            -d "{\"content\": \"# 📢 GitHubにPushがありました！\"}" \
-            ${{ secrets.DISCORD_WEBHOOK }}
+          # メッセージ本文の初期化
+          content="# 📢 GitHubにPushがありました！\n>>>"
 
-          # 各コミットをループ
+          # 有効な（Merge以外の）コミットをループで追記
           for i in $(seq 0 $((length - 1))); do
-
             iso_time=$(echo "$commits" | jq -r ".[$i].timestamp")
             formatted_time=$(TZ=Asia/Tokyo date -d "$iso_time" "+%Y年%m月%d日%H:%M:%S")
             message=$(echo "$commits" | jq -r ".[$i].message" | sed 's/"/\\"/g')
@@ -35,9 +32,13 @@ jobs:
               continue
             fi
 
-            # 各コミットの詳細を送信
-            curl -X POST -H "Content-Type: application/json" \
-              -d "{\"content\": \">>> ## 👤 by $actor\n\n**🕒  $formatted_time**\n💬 $message\n\"}" \
-              ${{ secrets.DISCORD_WEBHOOK }}
-
+            # メッセージ本文に追記
+            content="$content\n\n## 👤 by $actor\n**🕒 $formatted_time**\n💬 $message"
           done
+
+          # 通知を送信（内容がヘッダーだけなら送信しない）
+          if [ "$content" != "# 📢 GitHubにPushがありました！\n>>>" ]; then
+            curl -X POST -H "Content-Type: application/json" \
+              -d "{\"content\": \"$content\"}" \
+              ${{ secrets.DISCORD_WEBHOOK }}
+          fi
