--- a/.github/workflows/notify_discord.yml
+++ b/.github/workflows/notify_discord.yml
@@ -33,7 +33,7 @@ jobs:
             fi
 
             # メッセージ本文に追記
-            content="$content\n\n## 👤 by $actor\n**🕒 $formatted_time**\n💬 $message"
+            content="$content\n\n## >>> 👤 by $actor\n**🕒 $formatted_time**\n💬 $message"
           done
 
           # 通知を送信（内容がヘッダーだけなら送信しない）
