--- a/.github/workflows/notify_discord.yml
+++ b/.github/workflows/notify_discord.yml
@@ -36,7 +36,7 @@ jobs:
             fi
 
             # コミット情報を本文に追記
-            content="$content\n\n>>>　## 👤 by $actor\n**🕒 $formatted_time**\n💬 $message"
+            content="$content\n\nn>>> ## 👤 by $actor\n**🕒 $formatted_time**\n💬 $message"
 
             valid_commit_found=true
           done
